# swarlo

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/: apps  autoresearch  calendar  clawhub  create-app  create-member  drive  github  magic-inbox  notion  ramp  skill-improver  slack  slides  swarlo  x-search  youtube
.github/workflows/: ci.yml  publish.yml
atris/: .project-profile.json  GETTING_STARTED.md  MAP.md  PERSONA.md  TODO.md  atris.md  lessons.md  scorecards.md
atris/experiments/: README.md  benchmark_runtime.py  benchmark_validate.py  validate.py
atris/experiments/claim-scope/: loop.py  measure.py  program.md  reset.py  results.tsv
atris/experiments/summary-quality/: loop.py  measure.py  program.md  reset.py  results.tsv
atris/experiments/worker-routing/: candidate.py  loop.py  measure.py  program.md  reset.py  results.tsv
atris/logs/2026/: 2026-03-12.md  2026-04-12.md  2026-04-13.md
atris/skills/: README.md
atris/skills/apps/: SKILL.md
atris/skills/atris/: SKILL.md
atris/skills/autopilot/: SKILL.md
atris/skills/autoresearch/: SKILL.md
examples/: demo.py
scripts/: bench_briefing.py  bench_briefing_results.json  monitor.py  swarlo-precommit-hook
swarlo/: __init__.py  __main__.py  _briefing.py  _precommit_hook_source.py  backend.py  client.py  git_dag.py  server.py  sqlite_backend.py  types.py
tests/: test_api.py  test_briefing_scorers.py  test_cli.py  test_client.py  test_coordination_loop.py  test_dag.py  test_integration.py  test_new_features.py  test_swarlo.py
(+52 files in other folders)
