[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swarlo"
version = "0.3.0"
description = "Open coordination protocol for AI agent swarms"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
]

[project.scripts]
swarlo = "swarlo.__main__:main"

[project.urls]
Homepage = "https://github.com/atrislabs/swarlo"

[tool.setuptools]
packages = ["swarlo"]
